Fixed spacings on section 1

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ a{
     display: flex;
     flex-direction: column;
 }
-img{
+img {
     height: 200px;
 }
 
@@ -85,8 +85,6 @@ button{
 }
 .content{
     display: flex;
-
-    flex: 1 1 0;
 }
 .container-1{
     flex-direction: row;
@@ -115,19 +113,21 @@ button{
 .quote-who{
     align-self: flex-end;
     font-weight: 700;
-    
+    padding-right: 50px;
+    font-weight: bolder;
 }
 
 .quote, .quote-who{
-    margin: 0 6rem;
+    margin: 0 10rem;
 }
 
 
 .container-4 .content{
+    width: 100%;
     background-color: #3882F6;
     color: white;
-    flex-direction: row;
     justify-content: space-between;
+    flex-direction: row;
     padding: 2em 7em;
     border-radius: 5px;
     margin: 2rem
@@ -135,10 +135,7 @@ button{
 
 .inverted{
     border: 1px solid white;
-    padding: 0.5em;
 }
-
-
 
 .footer {
     text-align: center;
@@ -148,4 +145,16 @@ button{
 .random{
     font-size: 36px;
     font-style: bold;
+}
+
+.even-columns{
+    justify-content: center;
+    width: 400px;
+}
+
+.container-1{
+    justify-content: space-between;
+}
+h1,p {
+    margin-bottom: 1rem;
 }
